[fix] add, edit modal gap수정

--- a/src/components/common/budgetModal/BudgetModal.css
+++ b/src/components/common/budgetModal/BudgetModal.css
@@ -15,6 +15,7 @@
 }
 
 .modal-content {
+  gap : 20px;
   background: var(--white);
   border-radius: 10px;
   max-width: 560px; /* Desktop and Tablet */
